<resources>
    <string name="app_name">airbnb</string>
    <!--explore-->
    <string name="bnv_item_search">검색</string>
    <string name="bnv_item_wishlist">위시리스트</string>
    <string name="bnv_item_trip">여행</string>
    <string name="bnv_item_message">메시지</string>
    <string name="bnv_item_profile">프로필</string>
    <string name="top_nav_item_treehouse">통나무집</string>
    <string name="top_nav_item_room">방</string>
    <string name="top_nav_item_goodview">최고의 전망</string>
    <string name="top_nav_item_seashore">해변 근처</string>
    <string name="tv_main_search_where_to_go">어디로 여행가세요?</string>
    <string name="tv_main_search_where_to_go_2">어디든지 • 언제든 일주일 • 게스트 추가</string>
    <string name="search_bar_contentDescription">검색창</string>
    <string name="room_contentDescription">룸 이미지</string>
    <string name="iv_viewPager_score_star">별점 아이콘</string>
    <string name="ib_viewPager_favorite">좋아요</string>
    <string name="dummy_image1">R.string.ex_good1</string>
    <string name="dummy_image2">R.string.ex_good2</string>
    <string name="dummy_image3">R.string.ex_good3</string>
    <string name="dummy_image4">R.string.ex_good4</string>
    <!--who-->
    <string name="who_adult_title">성인</string>
    <string name="who_adult_description">13세 이상</string>
    <string name="who_kids_title">어린이</string>
    <string name="who_kids_description">2~12세</string>
    <string name="who_toddler_title">유아</string>
    <string name="who_toddler_description">2세 미만</string>
    <string name="who_pet_title">반려동물</string>
    <string name="who_pet_description"><u>반려동물을 동반하시나요?</u></string>
    <string name="who_title">누구와 함께 여행가시나요?</string>
    <string name="where_title">솝트님,\n이번엔 어디로 여행가시나요?</string>
    <!--appbar-->
    <string name="app_name">airbnb</string>
    <string name="tv_appbar_title_lodging">숙소</string>
    <string name="tv_appbar_title_experience">체험</string>
    <!--when-->
    <string name="appbar_content_description_back">상단바 뒤로가기 버튼입니다.</string>
    <string name="when_content_description_progress_bar">progress bar입니다.</string>
    <string name="tv_when_title">언제 여행을 가실 예정인가요?</string>
    <string name="tv_when_calender_year_month">2023 11월</string>
    <string name="tv_when_navigation_skip"><u>건너뛰기</u></string>
    <string name="btn_when_navigation_next">다음</string>
    <string name="btn_when_select_exact_date">정확한 날짜</string>
    <string name="tv_calender_selection_date">날짜지정</string>
    <string name="tv_calender_selection_month">월 단위</string>
    <string name="tv_calender_selection_flexible">유연한 일정</string>
    <string name="tv_calender_week_sun">일</string>
    <string name="tv_calender_week_mon">월</string>
    <string name="tv_calender_week_wed">수</string>
    <string name="tv_calender_week_tue">화</string>
    <string name="tv_calender_week_thu">목</string>
    <string name="tv_calender_week_fri">금</string>
    <string name="tv_calender_week_sat">토</string>
</resources>