<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_calender_week_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_calender_week_sun"
        android:textAppearance="@style/TextAppearance.Airbnb.body_medium_14"
        android:textColor="@color/gray_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calender_week_mon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_calender_week_mon"
        android:textAppearance="@style/TextAppearance.Airbnb.body_medium_14"
        android:textColor="@color/gray_text"
        app:layout_constraintEnd_toStartOf="@id/tv_calender_week_tue"
        app:layout_constraintStart_toEndOf="@id/tv_calender_week_sun"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calender_week_tue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_calender_week_tue"
        android:textAppearance="@style/TextAppearance.Airbnb.body_medium_14"
        android:textColor="@color/gray_text"
        app:layout_constraintEnd_toStartOf="@id/tv_calender_week_wed"
        app:layout_constraintStart_toEndOf="@id/tv_calender_week_mon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calender_week_wed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_calender_week_wed"
        android:textAppearance="@style/TextAppearance.Airbnb.body_medium_14"
        android:textColor="@color/gray_text"
        app:layout_constraintEnd_toStartOf="@id/tv_calender_week_thu"
        app:layout_constraintStart_toEndOf="@id/tv_calender_week_tue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calender_week_thu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_calender_week_thu"
        android:textAppearance="@style/TextAppearance.Airbnb.body_medium_14"
        android:textColor="@color/gray_text"
        app:layout_constraintEnd_toStartOf="@id/tv_calender_week_fri"
        app:layout_constraintStart_toEndOf="@id/tv_calender_week_wed"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calender_week_fri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_calender_week_fri"
        android:textAppearance="@style/TextAppearance.Airbnb.body_medium_14"
        android:textColor="@color/gray_text"
        app:layout_constraintEnd_toStartOf="@id/tv_calender_week_sat"
        app:layout_constraintStart_toEndOf="@id/tv_calender_week_thu"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_calender_week_sat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_calender_week_sat"
        android:textAppearance="@style/TextAppearance.Airbnb.body_medium_14"
        android:textColor="@color/gray_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>