<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            app:contentInsetStart="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:contentDescription="@string/appbar_content_description_back"
                android:padding="8dp"
                android:src="@drawable/ic_back" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_appbar_title_lodging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_appbar_title_lodging"
                    android:textAppearance="@style/TextAppearance.Airbnb.sub_medium_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/black1"
                    app:layout_constraintEnd_toEndOf="@id/tv_appbar_title_lodging"
                    app:layout_constraintStart_toStartOf="@id/tv_appbar_title_lodging"
                    app:layout_constraintTop_toBottomOf="@id/tv_appbar_title_lodging" />

                <TextView
                    android:id="@+id/tv_appbar_title_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tv_appbar_title_experience"
                    android:textAppearance="@style/TextAppearance.Airbnb.sub_medium_16"
                    android:textColor="@color/gray_text"
                    app:layout_constraintStart_toEndOf="@id/tv_appbar_title_lodging"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>